--- a/widget/gonk/Makefile.in
+++ b/widget/gonk/Makefile.in
@@ -18,6 +18,7 @@ srcdir          = @srcdir@
 VPATH           = \
   $(srcdir) \
   $(srcdir)/libui \
+  $(srcdir)/libdisplay \
   $(NULL)
 
 include $(DEPTH)/config/autoconf.mk
@@ -31,8 +32,6 @@ LIBXUL_LIBRARY  = 1
 
 CPPSRCS	= \
 	Framebuffer.cpp \
-	HWComposer.cpp \
-	HwcComposer2D.cpp \
 	nsAppShell.cpp \
 	nsWidgetFactory.cpp \
 	nsWindow.cpp \
@@ -62,6 +61,9 @@ CPPSRCS	= \
 	String8.cpp \
 	String16.cpp \
 	Static.cpp \
+	GonkDisplayJB.cpp \
+	FramebufferSurface.cpp \
+	GraphicBufferAlloc.cpp \
 	$(NULL)
 
 SHARED_LIBRARY_LIBS = ../xpwidgets/libxpwidgets_s.a
@@ -73,6 +75,7 @@ DEFINES += -D_IMPL_NS_WIDGET -DHAVE_OFF64_T -DSK_BUILD_FOR_ANDROID_NDK
 LOCAL_INCLUDES += \
 	-I$(ANDROID_SOURCE)/hardware/libhardware/include \
 	-I$(ANDROID_SOURCE)/hardware/libhardware_legacy/include \
+	-I$(ANDROID_SOURCE)/frameworks/native/opengl/include \
 	-I$(topsrcdir)/b2g/app \
 	-I$(topsrcdir)/widget/xpwidgets \
 	-I$(topsrcdir)/widget/shared \
